# graphical_template

./: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  test_run.ipynb  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/graphical_template/: __init__.py  plots.py  theme.py
tests/: __init__.py  test_graphical_template.py
