[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphical_template"
version = "0.1.0"
description = "Customised default settings for graphical visualisation"
readme = "README.rst"
authors = [
  {name = "huiwen", email = "huiwen@nus.edu.sg"}
]
maintainers = [
  {name = "huiwen", email = "huiwen@nus.edu.sg"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
    "matplotlib",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/huiwen911/graphical_template/issues"
changelog = "https://github.com/huiwen911/graphical_template/blob/master/changelog.md"
homepage = "https://github.com/huiwen911/graphical_template"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

